<resources>
    <string name="app_name">GasMeUp</string>
    <string name="title_activity_maps">Map</string>
    <string name="destiation">Enter the location of your destination</string>
    <string name="search">SEARCH</string>
    <string name="destination">Destination Location</string>
    <string name="origin">Origin Location</string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="clear">CLEAR</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="location_name">Location Name (e.g. Home)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="view_favorites">View Favorites</string>
    <string name="favorites">Favorites</string>
</resources>
